fix: use gravitee-management-webui 1.29.0-oodrive
Using the v1.29.9-oodrive of gravitee-management-webui which contains the
fix for https://github.com/gravitee-io/issues/issues/2672

It's a forked project because the Satellizer maintainer no longer
maintains the project, thus no fix nor publication can be performed in
the original project repository.

--- a/environments/demo/common.yml
+++ b/environments/demo/common.yml
@@ -52,7 +52,7 @@ services:
 
   managementui:
     hostname: demo-managementui
-    image: graviteeio/management-ui:latest
+    image: graviteeio/management-ui:1.29.0-oodrive
 
   managementapi:
     hostname: demo-managementapi
